updated new ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 data/processed/cleaned_data.csv
 data/processed/service_provider_pnumber_label.csv
 data/raw/mobile_nos.csv
+app/api_key_generator.py
+app/setenv.sh
